--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,33 @@ plugins {
     id 'com.android.application'
 }
 
+project.afterEvaluate {
+    publishing {
+        def versionName = "1.0"
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.lkp.component'
+                artifactId = 'library'
+                version = versionName
+            }
+        }
+        /*repositories {
+            maven {
+                // change URLs to point to your repos, e.g. http://my.org/repo
+                def baseUrl = buildDir.getParent()
+                def releasesRepoUrl = "$baseUrl/repos/releases"
+                def snapshotsRepoUrl = "$baseUrl/repos/snapshots"
+                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+            }
+        }*/
+    }
+}
+
 android {
     compileSdkVersion 30
 
