--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,33 +1,10 @@
 plugins {
     id 'com.android.application'
+    id 'maven-publish'
 }
 
-project.afterEvaluate {
-    publishing {
-        def versionName = "1.0"
-        publications {
-            // Creates a Maven publication called "release".
-            release(MavenPublication) {
-                // Applies the component for the release build variant.
-                from components.release
-
-                // You can then customize attributes of the publication as shown below.
-                groupId = 'com.lkp.component'
-                artifactId = 'library'
-                version = versionName
-            }
-        }
-        /*repositories {
-            maven {
-                // change URLs to point to your repos, e.g. http://my.org/repo
-                def baseUrl = buildDir.getParent()
-                def releasesRepoUrl = "$baseUrl/repos/releases"
-                def snapshotsRepoUrl = "$baseUrl/repos/snapshots"
-                url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-            }
-        }*/
-    }
-}
+group = 'com.lkp'
+version = '1.0'
 
 android {
     compileSdkVersion 30
@@ -62,4 +39,18 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.lkp.component'
+                artifactId = 'library'
+                version = '1.0'
+            }
+        }
+    }
 }
